[project]
name = "pyctrld"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pydantic>=2.11.9",
    "requests>=2.32.5",
]

[dependency-groups]
dev = [
    "dotenv>=0.9.9",
    "pytest>=8.4.2",
]
[tool.ruff.lint.isort]
required-imports = ["from __future__ import annotations"]
[tool.ruff.lint.pydocstyle]
convention = "google"
